# Neoluma

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  FirstAlphaSpecification.md  LICENSE  README.md  Specification.md  TRADEMARK.md  build.bat  build.sh  crowdin.yml  example.nm  main.cpp  main.nl  run.bat
.build/: .ninja_deps  .ninja_log  CMakeCache.txt  NeolumaCLI.lib  NeolumaCore.lib  build.ninja  cmake_install.cmake  compile_commands.json
.build/.modules/cpptoml/: cmake_install.cmake  cpptoml.doxygen
.build/.modules/cpptoml/cpptoml/: cpptomlTargets.cmake
.build/.modules/cpptoml/examples/: cmake_install.cmake
TestProject/: LICENSE  testproject.nlp
TestProject/src/: main.nm  models.nm  utils.nm
TestProject/src/more/: add.nm  models.nm
include/: lexer.h  nodes.h  parser.h
resources/: app.icns  uninstall.sh
src/: HelperFunctions.cpp  HelperFunctions.hpp  lexer.cpp  main.cpp  parser.cpp  program.nm  uninstaller.cpp
src/CLI/: CLI.cpp  CLI.hpp  CLIHelperFunctions.cpp  CLIHelperFunctions.hpp  cli.cpp  cli.hpp  helpers.hpp
src/CLI/LicenseTemplates/: BSDv2Simplified.txt  BSDv3NewRevised.txt
src/Core/: Compiler.cpp  Compiler.hpp  compiler.cpp  compiler.hpp
src/Core/Extras/ErrorManager/: ErrorManager.cpp  ErrorManager.hpp
src/Core/Extras/ProjectManager/: ProjectManager.cpp  ProjectManager.hpp  projectmanager.cpp  projectmanager.hpp
src/Core/Frontend/: Nodes.cpp  Nodes.hpp  Token.cpp  Token.hpp  nodes.cpp  nodes.hpp  program.hpp  token.cpp  token.hpp
src/Core/Frontend/ErrorHandler/: errormanager.cpp
src/Core/Frontend/ErrorManager/: ErrorManager.cpp  ErrorManager.hpp  errormanager.cpp  errormanager.hpp
src/Core/Frontend/Lexer/: Lexer.cpp  Lexer.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/Core/Frontend/Orchestrator/: Orchestrator.cpp  Orchestrator.hpp
src/Core/Frontend/Parser/: ASTBuilder.hpp  Parser.cpp  Parser.hpp  nodes.hpp  parser.cpp  parser.hpp
src/Core/Frontend/SemanticAnalyser/: SemanticAnalysis.cpp  SemanticAnalysis.hpp  SymbolTable.hpp
src/Core/Frontend/SemanticAnalysis/: SemanticAnalysis.cpp  SemanticAnalysis.hpp
src/Core/Lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/Core/Middleend/IRGenerator/: IRGenerator.cpp  IRGenerator.hpp
src/Core/Parser/: Parser.cpp  nodes.hpp  parser.hpp  program.hpp
src/Extension/: CHANGELOG.md  README.md  example.nm  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
src/Extension/syntaxes/: neoluma.tmLanguage.json
src/Installer/: index.html  package-lock.json  package.json  vite.config.ts
src/Installer/src/: App.vue
src/Installer/src-tauri/: Cargo.toml  tauri.conf.json
src/Installer/src-tauri/icons/: icon.icns
src/Installer/src-tauri/src/: installer.rs  lib.rs  main.rs
src/Installer/src/components/: Titlebar.vue
src/IntristicModules/std/: LICENSE  std.nlp
src/IntristicModules/std/src/: fs.nm  io.nm  iter.nm  math.nm  random.nm  time.nm
src/Lexer/: lexer.cpp  lexer.h  lexer.hpp  nodes.hpp  token.cpp  token.h  token.hpp
src/Libraries/Asker/: Asker.cpp  Asker.hpp  asker.cpp  asker.hpp
src/Libraries/Color/: Color.cpp
src/Libraries/Json/: Json.cpp  Json.hpp  JsonGet.hpp
src/Libraries/Localization/: Localization.cpp  Localization.hpp
src/Libraries/Paths/: Paths.cpp  Paths.hpp
src/Libraries/Toml/: Toml.cpp
src/Libraries/color/: color.cpp  color.hpp
src/Libraries/json/: json5cpp.hpp
src/Libraries/localization/: localization.cpp  localization.hpp
src/Libraries/toml/: toml.cpp  toml.hpp
src/Localization/: ar_SA.json  de_DE.json  en_US.json  en_us.json  it_IT.json  ru_RU.json  tr_TR.json  uk_UA.json  zh_CN.json
src/Localization/CLI/: ar_SA.jsonc  de_DE.jsonc  it_IT.jsonc  ru_RU.jsonc
src/Localization/ErrorManager/: ar_SA.jsonc  en_US.jsonc  ru_RU.jsonc
src/Localization/Libraries/: ar_SA.jsonc  de_DE.jsonc  ru_RU.jsonc
src/Parser/: Parser.cpp  Parser_old.cpp  nodes.hpp  parser.h  parser.hpp
tests/: CMakeLists.txt  README.md  example.nlm
tests/cases/orchestrator/invalid/empty_project/: expect.json
tests/cases/orchestrator/invalid/import_alias_conflict_native_resolved/: expect.json  main.nm
tests/cases/orchestrator/invalid/no_entrypoint/: expect.json
tests/cases/parser/invalid/malformed_array/: expect.json  main.nm
tests/cases/parser/invalid/malformed_dict/: expect.json  main.nm
tests/cases/parser/invalid/malformed_set/: expect.json  main.nm
tests/cases/parser/valid/decorator_entry/: main.nm
tests/cases/semantic/invalid/break_outside_loop/: expect.json  main.nm
tests/cases/semantic/invalid/const_reassignment/: expect.json  main.nm
tests/cases/semantic/invalid/continue_outside_loop/: expect.json  main.nm
tests/cases/semantic/invalid/duplicate_parameter/: expect.json  main.nm
tests/cases/semantic/invalid/return_outside_function/: expect.json  main.nm
tests/cases/semantic/invalid/undefined_function/: expect.json  main.nm
tests/cases/semantic/invalid/undefined_variable/: expect.json  main.nm
tests/runner/: run-tests.ps1  testrunner.py
unused_tab/Parser/: parser.cpp  parser.hpp
website/: package-lock.json  package.json  tsconfig.json
website/public/: index.html  script.js  styles.css
website/src/: server.ts
